{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 88,
  "lineage": "f70131ba-73a5-b14b-0e9c-8583997e44d3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fgtport1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkInterfaces/fgtport1",
            "internal_domain_name_suffix": "gyaulti4vrqe1oebpirixafzoh.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/publicIPAddresses/FGTPublicIP",
                "subnet_id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/virtualNetworks/fgtvnetwork/subnets/publicSubnet"
              }
            ],
            "location": "westus2",
            "name": "fgtport1",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "terraformRSG",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_public_ip.FGTPublicIp",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.fgtvnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fgtport2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkInterfaces/fgtport2",
            "internal_domain_name_suffix": "gyaulti4vrqe1oebpirixafzoh.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/virtualNetworks/fgtvnetwork/subnets/privateSubnet"
              }
            ],
            "location": "westus2",
            "name": "fgtport2",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "terraformRSG",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.fgtvnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "port1nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkInterfaces/fgtport1|/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkSecurityGroups/PublicNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkInterfaces/fgtport1",
            "network_security_group_id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkSecurityGroups/PublicNetworkSecurityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.fgtport1",
            "azurerm_network_security_group.publicnetworknsg",
            "azurerm_public_ip.FGTPublicIp",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_network.fgtvnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "port2nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkInterfaces/fgtport2|/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkSecurityGroups/PrivateNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkInterfaces/fgtport2",
            "network_security_group_id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkSecurityGroups/PrivateNetworkSecurityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.fgtport2",
            "azurerm_network_security_group.privatenetworknsg",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.privatesubnet",
            "azurerm_virtual_network.fgtvnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "privatenetworknsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkSecurityGroups/PrivateNetworkSecurityGroup",
            "location": "westus2",
            "name": "PrivateNetworkSecurityGroup",
            "resource_group_name": "terraformRSG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "All",
                "priority": 1001,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "publicnetworknsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkSecurityGroups/PublicNetworkSecurityGroup",
            "location": "westus2",
            "name": "PublicNetworkSecurityGroup",
            "resource_group_name": "terraformRSG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outgoing_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkSecurityGroups/PrivateNetworkSecurityGroup/securityRules/egress-private",
            "name": "egress-private",
            "network_security_group_name": "PrivateNetworkSecurityGroup",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "terraformRSG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.privatenetworknsg",
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outgoing_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/networkSecurityGroups/PublicNetworkSecurityGroup/securityRules/egress",
            "name": "egress",
            "network_security_group_name": "PublicNetworkSecurityGroup",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "terraformRSG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.publicnetworknsg",
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "FGTPublicIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/publicIPAddresses/FGTPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.149.6.117",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "FGTPublicIP",
            "resource_group_name": "terraformRSG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/routeTables/InternalRouteTable1/routes/default",
            "name": "default",
            "next_hop_in_ip_address": "10.1.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "terraformRSG",
            "route_table_name": "InternalRouteTable1",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.fgtport1",
            "azurerm_network_interface.fgtport2",
            "azurerm_public_ip.FGTPublicIp",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_route_table.internal",
            "azurerm_storage_account.fgtstorageaccount",
            "azurerm_subnet.privatesubnet",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_machine.fgtvm",
            "azurerm_virtual_network.fgtvnetwork",
            "data.template_file.fgtvm",
            "random_id.randomId"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/routeTables/InternalRouteTable1",
            "location": "westus2",
            "name": "InternalRouteTable1",
            "resource_group_name": "terraformRSG",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.fgtport1",
            "azurerm_network_interface.fgtport2",
            "azurerm_public_ip.FGTPublicIp",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_storage_account.fgtstorageaccount",
            "azurerm_subnet.privatesubnet",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_machine.fgtvm",
            "azurerm_virtual_network.fgtvnetwork",
            "data.template_file.fgtvm",
            "random_id.randomId"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/virtualNetworks/fgtvnetwork/subnets/privateSubnet",
            "name": "privateSubnet",
            "resource_group_name": "terraformRSG",
            "virtual_network_name": "fgtvnetwork"
          },
          "dependencies": [
            "azurerm_resource_group.myterraformgroup",
            "azurerm_virtual_network.fgtvnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/24",
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/virtualNetworks/fgtvnetwork/subnets/publicSubnet",
            "name": "publicSubnet",
            "resource_group_name": "terraformRSG",
            "virtual_network_name": "fgtvnetwork"
          },
          "dependencies": [
            "azurerm_resource_group.myterraformgroup",
            "azurerm_virtual_network.fgtvnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "internalassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/virtualNetworks/fgtvnetwork/subnets/privateSubnet",
            "route_table_id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/routeTables/InternalRouteTable1",
            "subnet_id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/virtualNetworks/fgtvnetwork/subnets/privateSubnet"
          },
          "dependencies": [
            "azurerm_network_interface.fgtport1",
            "azurerm_network_interface.fgtport2",
            "azurerm_public_ip.FGTPublicIp",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_route_table.internal",
            "azurerm_storage_account.fgtstorageaccount",
            "azurerm_subnet.privatesubnet",
            "azurerm_subnet.publicsubnet",
            "azurerm_virtual_machine.fgtvm",
            "azurerm_virtual_network.fgtvnetwork",
            "data.template_file.fgtvm",
            "random_id.randomId"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "fgtvnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cd450136-ac1e-4d60-b881-7a228b80b977",
            "id": "/subscriptions/a2707b44-1087-4ba6-8c61-abb576b2ff66/resourceGroups/terraformRSG/providers/Microsoft.Network/virtualNetworks/fgtvnetwork",
            "location": "westus2",
            "name": "fgtvnetwork",
            "resource_group_name": "terraformRSG",
            "tags": {
              "environment": "Terraform Demo"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    }
  ]
}